tests/bad/invalid_variable_namespace.siv
require "variables";

set "name.space" "value";
keep;